--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "bbasinski/glided-rose-kata",
-  "description": "Glided rose kata",
+  "name": "bbasinski/gilded-rose-kata",
+  "description": "Gilded rose kata",
   "minimum-stability": "stable",
   "license": "proprietary",
   "authors": [
